--- a/public/home.css
+++ b/public/home.css
@@ -242,6 +242,7 @@
 	}
 
 
+
 	#tabs ul{
 		display: inline-block;
 
@@ -369,17 +370,21 @@ body.loadingTracks #loadTracks {
 	width: 20%;
 	height: 30px;
 	font-size: 0.8em;
-	text-align:right;
+	text-align:left;
 	height: 30px;
 	display:table;
 	text-align:right;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+
 
 }
 
 .playcount p{
 	display: table-cell;
 	vertical-align: middle;
-		padding-right: 24px;
+	padding-right: 24px;
 
 
 }
@@ -390,6 +395,7 @@ body.loadingTracks #loadTracks {
 	width: 20px;
 	height: 80%;
 	position: absolute;
+	right: 2px;
 }
 
 .likescount{
@@ -400,6 +406,10 @@ body.loadingTracks #loadTracks {
 	font-size: 0.8em;
 		display:table;
 	text-align:right;
+		white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+
 }
 .likescount p{
 	display: table-cell;
@@ -431,20 +441,28 @@ body.loadingTracks #loadTracks {
 #likes-list
 {
 	width: 100%;
-	padding: 14px;
 	margin: 0px;
+	padding: 14px;
+
 }
-#tracks-list
+#track-list
 {
 	width: 100%;
-	padding: 14px;
 	margin: 0px;
+	padding: 14px;
 
 }
 #tabs ul
 {
 	list-style-type: none;
 
+}
+#tabs-1{
+	margin-top: 10px;
+}
+#tabs-2{
+
+	margin-top: 10px;
 }
 
 
