--- a/public/home.css
+++ b/public/home.css
@@ -96,19 +96,32 @@
 		position: relative;
 
 	}
+	#test{
+		width: 100%;
+		height: 100%;
+		padding-top: 5%;
+	}
 	#stats{
+
 		position: relative;
 		width: 100%;
 		height: 30%;
 		display: inline-block;
 	}
 	#followers{
-		height: 100%;
 		width: 20%;
 		position: relative;
 		float: left;
 		padding-left: 30px;
+		display:table-cell;
+	text-align:right;
+	vertical-align: center;
+		white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	}
+
+
 	#followers:before{
 		content: "";
 		background: url("followers.png") no-repeat;
@@ -120,11 +133,15 @@
 
 	}
 	#following{	
-		height: 100%;
 		width: 20%;
 		position: relative;
 		float: left;
 		padding-left: 50px;
+		display:table;
+	text-align:right;
+		white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	}
 	#following:before{
 		content: "";
@@ -137,12 +154,16 @@
 
 	}
 	#tracksNumber{
-		height: 100%;
 		width: 20%;
 		padding-left: 10px;
 		position: relative;
 		float: left;
 		padding-left: 35px;
+		display:table;
+	text-align:right;
+		white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 
 	}
 	#tracksNumber:before{
@@ -162,11 +183,14 @@
 		padding-left: 10px;
 		position: relative;
 		float: left;
+		padding:5px;
 	}
 
 	#followbutton{
-		width: 70%;
-		height: 30%;
+		width: 80%;
+		float: right;
+		margin-right: 1px;
+		padding-bottom: 5px;
 		color: black;
 	}
 
@@ -236,17 +260,11 @@
 	}
 
 
-	#tabs{
-		position: relative;
-
-	}
 
 
 
-	#tabs ul{
-		display: inline-block;
 
-	}
+
 
 	#buttonShowNav{
 		width: 40px;
@@ -452,6 +470,22 @@ body.loadingTracks #loadTracks {
 	padding: 14px;
 
 }
+#tabs{
+			white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+#mytabs{
+	display: inline-block;
+	height: 41px;
+	position: relative;
+
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+
+}
+
 #tabs ul
 {
 	list-style-type: none;
@@ -464,6 +498,8 @@ body.loadingTracks #loadTracks {
 
 	margin-top: 10px;
 }
+.tabPlaylist {float:right!important;}
+
 
 
 @media (max-width: 300px)  {
